# canipypi

./: CHANGELOG.md  README.md  pyproject.toml
canipypi/: __init__.py  core.py
tests/: test_canipypi.py
