[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canipypi"
dynamic = ["version"]
description = "Check whether PyPI will accept a project name."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "canipypi contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "httpx",
  "packaging",
  "stdlib-list",
]

[project.scripts]
canipypi = "canipypi:main"

[project.optional-dependencies]
dev = [
  "fastship",
  "pytest",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/canipypi"

[tool.setuptools.dynamic]
version = { attr = "canipypi.__version__" }

[tool.setuptools.packages.find]
include = ["canipypi"]
